changed SecurityConfig.java